--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = time_counter
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.timeCounter
+PRODUCT_BUNDLE_IDENTIFIER = com.rvsdev.timeCounter
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.rvsdev. All rights reserved.
