--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.rvsdev" "\0"
             VALUE "FileDescription", "time_counter" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "time_counter" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.rvsdev. All rights reserved." "\0"
             VALUE "OriginalFilename", "time_counter.exe" "\0"
             VALUE "ProductName", "time_counter" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
