--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_modular: ^6.3.2
   shared_preferences: ^2.2.1
 
 dev_dependencies:
