--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 dependencies:
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_modular: ^6.3.2
   shared_preferences: ^2.2.1
+  theme_manager: ^1.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
