--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_modular: ^6.3.2
   shared_preferences: ^2.2.1
